stylefix: fix broken styles for old chrome

--- a/src/app/common/components/game/game-preview/game-preview-with-flag.component.scss
+++ b/src/app/common/components/game/game-preview/game-preview-with-flag.component.scss
@@ -17,6 +17,7 @@
 
   &__image {
     display: block;
+    height: 100%;
     max-height: 16rem;
     max-width: 20rem;
     width: 50%;
@@ -28,6 +29,7 @@
 
     box-shadow: 0px 0px 20px 2px rgba(black, 0.1);
   }
+
   &__title {
     display: flex;
     width: 50%;
